@@ -17,6 +17,10 @@ namespace Cobweb\SvconnectorJson\Service;
  * The TYPO3 project - inspiring people to share!
  */
 
+use Cobweb\Svconnector\Event\ProcessArrayDataEvent;
+use Cobweb\Svconnector\Event\ProcessRawDataEvent;
+use Cobweb\Svconnector\Event\ProcessResponseEvent;
+use Cobweb\Svconnector\Event\ProcessXmlDataEvent;
 use Cobweb\Svconnector\Exception\SourceErrorException;
 use Cobweb\Svconnector\Service\ConnectorBase;
 use Cobweb\Svconnector\Utility\FileUtility;
@@ -64,21 +68,21 @@ class ConnectorJson extends ConnectorBase
      */
     public function checkConfiguration(array $parameters = []): array
     {
-        $result = parent::checkConfiguration($parameters);
+        $result = parent::checkConfiguration(...func_get_args());
         // The "uri" parameter is mandatory
-        if (empty($parameters['uri'])) {
+        if (empty($this->parameters['uri'])) {
             $result[ContextualFeedbackSeverity::ERROR->value][] = $this->sL(
                 'LLL:EXT:svconnector_json/Resources/Private/Language/locallang.xlf:no_json_defined'
             );
         }
         // The "headers" parameter is expected to be an array
-        if (isset($parameters['headers']) && !is_array($parameters['headers'])) {
+        if (isset($this->parameters['headers']) && !is_array($this->parameters['headers'])) {
             $result[ContextualFeedbackSeverity::WARNING->value][] = $this->sL(
                 'LLL:EXT:svconnector_json/Resources/Private/Language/locallang.xlf:headers_must_be_array'
             );
         }
         // The "queryParameters" parameter is expected to be an array
-        if (isset($parameters['queryParameters']) && !is_array($parameters['queryParameters'])) {
+        if (isset($this->parameters['queryParameters']) && !is_array($this->parameters['queryParameters'])) {
             $result[ContextualFeedbackSeverity::WARNING->value][] = $this->sL(
                 'LLL:EXT:svconnector_json/Resources/Private/Language/locallang.xlf:query_parameters_must_be_array'
             );
@@ -96,21 +100,32 @@ class ConnectorJson extends ConnectorBase
      */
     public function fetchRaw(array $parameters = [])
     {
-        $result = $this->query($parameters);
+        // Call to parent is used only to raise flag about argument deprecation
+        // TODO: remove once method signature is changed in next major version
+        parent::fetchRaw(...func_get_args());
+
+        $result = $this->query();
         $this->logger->info(
             'RAW JSON data',
             [$result]
         );
         // Implement post-processing hook
         $hooks = $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processRaw'] ?? null;
-        if (is_array($hooks)) {
+        if (is_array($hooks) && count($hooks) > 0) {
+            trigger_error(
+                'Using the processRaw hook is deprecated. Use the ProcessRawDataEvent instead',
+                E_USER_DEPRECATED
+            );
             foreach ($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processRaw'] as $className) {
                 $processor = GeneralUtility::makeInstance($className);
                 $result = $processor->processRaw($result, $this);
             }
         }
-
-        return $result;
+        /** @var ProcessRawDataEvent $event */
+        $event = $this->eventDispatcher->dispatch(
+            new ProcessRawDataEvent($result, $this)
+        );
+        return $event->getData();
     }
 
     /**
@@ -122,19 +137,31 @@ class ConnectorJson extends ConnectorBase
      */
     public function fetchXML(array $parameters = []): string
     {
-        $xml = $this->fetchArray($parameters);
+        // Call to parent is used only to raise flag about argument deprecation
+        // TODO: remove once method signature is changed in next major version
+        parent::fetchXML(...func_get_args());
+
+        $xml = $this->fetchArray();
         $xml = '<?xml version="1.0" encoding="utf-8" standalone="yes" ?>' . "\n" . GeneralUtility::array2xml($xml);
 
         // Implement post-processing hook
         $hooks = $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processXML'] ?? null;
-        if (is_array($hooks)) {
+        if (is_array($hooks) && count($hooks) > 0) {
+            trigger_error(
+                'Using the processXML hook is deprecated. Use the ProcessXmlDataEvent instead',
+                E_USER_DEPRECATED
+            );
             foreach ($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processXML'] as $className) {
                 $processor = GeneralUtility::makeInstance($className);
                 $xml = $processor->processXML($xml, $this);
             }
         }
+        /** @var ProcessXmlDataEvent $event */
+        $event = $this->eventDispatcher->dispatch(
+            new ProcessXmlDataEvent($xml, $this)
+        );
 
-        return $xml;
+        return $event->getData();
     }
 
     /**
@@ -146,8 +173,12 @@ class ConnectorJson extends ConnectorBase
      */
     public function fetchArray(array $parameters = []): array
     {
+        // Call to parent is used only to raise flag about argument deprecation
+        // TODO: remove once method signature is changed in next major version
+        parent::fetchArray(...func_get_args());
+
         // Get the data from the source
-        $result = $this->query($parameters);
+        $result = $this->query();
         $result = json_decode((string)$result, true, 512, JSON_THROW_ON_ERROR);
         if (!is_array($result)) {
             throw new \InvalidArgumentException(
@@ -156,7 +187,7 @@ class ConnectorJson extends ConnectorBase
             );
         }
 
-        $paginator = $this->getPaginator($parameters);
+        $paginator = $this->getPaginator();
         if ($paginator === null) {
             $data = $result;
         } else {
@@ -170,12 +201,12 @@ class ConnectorJson extends ConnectorBase
                 $nextPage = $paginator->getNextPage();
                 if ($nextPage > $currentPage) {
                     $mergedQueyParameters = array_merge(
-                        $parameters['queryParameters'] ?? [],
+                        $this->parameters['queryParameters'] ?? [],
                         [
                             $pagingParameter => $nextPage
                         ]
                     );
-                    $currentParameters = $parameters;
+                    $currentParameters = $this->parameters;
                     $currentParameters['queryParameters'] = $mergedQueyParameters;
                     $result = $this->query($currentParameters);
                     $result = json_decode((string)$result, true, 512, JSON_THROW_ON_ERROR);
@@ -206,13 +237,21 @@ class ConnectorJson extends ConnectorBase
 
         // Implement post-processing hook
         $hooks = $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processArray'] ?? null;
-        if (is_array($hooks)) {
+        if (is_array($hooks) && count($hooks) > 0) {
+            trigger_error(
+                'Using the processArray hook is deprecated. Use the ProcessArrayDataEvent instead',
+                E_USER_DEPRECATED
+            );
             foreach ($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processArray'] as $className) {
                 $processor = GeneralUtility::makeInstance($className);
                 $data = $processor->processArray($data, $this);
             }
         }
-        return $data;
+        /** @var ProcessArrayDataEvent $event */
+        $event = $this->eventDispatcher->dispatch(
+            new ProcessArrayDataEvent($data, $this)
+        );
+        return $event->getData();
     }
 
     /**
@@ -224,8 +263,12 @@ class ConnectorJson extends ConnectorBase
      */
     protected function query(array $parameters = [])
     {
+        // Call to parent is used only to raise flag about argument deprecation
+        // TODO: remove once method signature is changed in next major version
+        parent::query(...func_get_args());
+
         // Check the configuration
-        $problems = $this->checkConfiguration($parameters);
+        $problems = $this->checkConfiguration($this->parameters);
         // Log all issues and raise error if any
         $this->logConfigurationCheck($problems);
         if (count($problems[ContextualFeedbackSeverity::ERROR->value]) > 0) {
@@ -246,21 +289,25 @@ class ConnectorJson extends ConnectorBase
 
         // Define the headers
         $headers = null;
-        if (isset($parameters['headers']) && is_array($parameters['headers']) && count($parameters['headers']) > 0) {
-            $headers = $parameters['headers'];
+        if (isset($this->parameters['headers']) && is_array($this->parameters['headers']) && count($this->parameters['headers']) > 0) {
+            $headers = $this->parameters['headers'];
         }
 
         $this->logger->info(
             'Call parameters and headers',
-            ['params' => $parameters, 'headers' => $headers]
+            ['params' => $this->parameters, 'headers' => $headers]
         );
 
         $fileUtility = GeneralUtility::makeInstance(FileUtility::class);
-        $uri = $parameters['uri'];
-        if (isset($parameters['queryParameters'])) {
-            $uri = sprintf('%s?%s', $uri, http_build_query($parameters['queryParameters']));
+        $uri = $this->parameters['uri'];
+        if (isset($this->parameters['queryParameters'])) {
+            $uri = sprintf('%s?%s', $uri, http_build_query($this->parameters['queryParameters']));
         }
-        $data = $fileUtility->getFileContent($uri, $headers);
+        $data = $fileUtility->getFileContent(
+            $uri,
+            $headers,
+            $this->parameters['method'] ?? 'GET'
+        );
         if ($data === false) {
             $message = sprintf(
                 $this->sL('LLL:EXT:svconnector_json/Resources/Private/Language/locallang.xlf:json_not_fetched'),
@@ -277,12 +324,12 @@ class ConnectorJson extends ConnectorBase
         // Check if the current charset is the same as the file encoding
         // Don't do the check if no encoding was defined
         // TODO: add automatic encoding detection by reading the encoding attribute in the JSON header
-        if (empty($parameters['encoding'])) {
+        if (empty($this->parameters['encoding'])) {
             $encoding = '';
             $isSameCharset = true;
         } else {
             // Standardize charset name and compare
-            $encoding = $parameters['encoding'];
+            $encoding = $this->parameters['encoding'];
             $isSameCharset = $this->getCharset() === $encoding;
         }
         // If the charset is not the same, convert data
@@ -292,26 +339,31 @@ class ConnectorJson extends ConnectorBase
 
         // Process the result if any hook is registered
         $hooks = $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processResponse'] ?? null;
-        if (is_array($hooks)) {
+        if (is_array($hooks) && count($hooks) > 0) {
+            trigger_error(
+                'Using the processResponse hook is deprecated. Use the ProcessResponseEvent instead',
+                E_USER_DEPRECATED
+            );
             foreach ($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS'][$this->extensionKey]['processResponse'] as $className) {
                 $processor = GeneralUtility::makeInstance($className);
                 $data = $processor->processResponse($data, $this);
             }
         }
+        /** @var ProcessResponseEvent $event */
+        $event = $this->eventDispatcher->dispatch(
+            new ProcessResponseEvent($data, $this)
+        );
 
         // Return the result
-        return $data;
+        return $event->getResponse();
     }
 
     /**
      * Return a paginator object, if defined
-     *
-     * @param array $parameters
-     * @return AbstractPaginator|null
      */
-    protected function getPaginator(array $parameters): ?AbstractPaginator
+    protected function getPaginator(): ?AbstractPaginator
     {
-        $paginatorSetting = $parameters['paginator'] ?? '';
+        $paginatorSetting = $this->parameters['paginator'] ?? '';
         if ($paginatorSetting === '') {
             return null;
         }
