@@ -1,3 +1,7 @@
+2024-11-10 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Use parameters as member variable, use events, deprecate hooks, resolves #17
+
 2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #16
